<resources>
    <string name="app_name">Attendance Tracker</string>
    <string name="home_page_title">Your Organisations</string>
    <string name="add_new_organisation">New Organisation</string>
    <string name="add">Add</string>
    <string name="overall_attendance">Overall Attendance</string>
    <string name="increment">+</string>
    <string name="decrement">-</string>
    <string name="reset">Reset</string>
    <string name="update">Update</string>
    <string name="enter_organisation_name">Enter Organisation Name</string>
    <string name="enter_target_attendance">Enter Target Attendance</string>
    <string name="add_class_appointment">Add Class/Appointment</string>
    <string name="app_logo">App Logo</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_new_target">Enter new target</string>
    <string name="backup_amp_restore"><![CDATA[Backup & Restore]]></string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="sign_in_prompt">You need to sign in with Google to backup and restore</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="please_wait">Please Wait</string>
    <string name="sign_out">Sign out</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="target_text">Target:</string>
    <string name="delete_all_classes">Delete All Classes</string>
    <string name="edit_past_attendance">Edit Past Attendance</string>
    <string name="download_attendance">Download Attendance</string>
    <string name="sign_in">Sign In</string>
    <string name="signed_out">Signed out successfully</string>
    <string name="goel_applications">Goel Applications</string>
    <string name="confirm_backup">Confirm Backup</string>
    <string name="backup_prompt">Creating the backup will overwrite the existing backup. Do want to continue?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="backup_successful">Backed Up Successfully</string>
    <string name="backup_failed">Back Up Failed</string>
    <string name="confirm_restore">Confirm Restore</string>
    <string name="restore_prompt">Performing the restore will overwrite the existing data. Do want to continue?</string>
    <string name="restore_successful">Data Restored Successfully</string>
    <string name="backup_not_found_exception">Object does not exist at location.</string>
    <string name="restore_failed">Restore Failed</string>
    <string name="backup_not_found_title">Backup Not Found</string>
    <string name="backup_not_found_message">No backup found on this account. Please try with a different account</string>
    <string name="ok">OK</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="updated">Updated Successfully</string>
    <string name="delete_class_prompt">Are you sure you want to delete %s?</string>
    <string name="deleted">Deleted %s Successfully</string>
    <string name="error_message">Some Error Occurred</string>
    <string name="attendance_marked">Attendance Marked</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="download_failed">Download Failed</string>
    <string name="file_saved">File Saved as %s</string>
    <string name="delete_all_prompt">This will delete all the Classes in the organisation. Continue?</string>
    <string name="deleted_all_classes">All classes deleted</string>
    <string name="more_apps">More Apps</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_amp_condition"><![CDATA[Terms & Condition]]></string>
    <string name="nothing_found">Nothing Found</string>
    <string name="no_organisations">No Organisations found. Create one or restore from a backup</string>
    <string name="no_classes">No Classes/Appointments found. Add one to get started</string>
</resources>