<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/base_background"
    tools:context=".CalendarActivity">

    <TextView
        android:id="@+id/class_name_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/list_background"
        android:elevation="7dp"
        android:fontFamily="@font/poly"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColor="?attr/text_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CalendarView
        android:id="@+id/class_calendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:elevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_name_calendar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/class_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/list_background"
        android:elevation="7dp"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/class_calendar">

        <TextView
            android:id="@+id/present_counter"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/list_background"
            android:backgroundTint="@color/green"
            android:elevation="5dp"
            android:fontFamily="@font/lily_script_one"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/present_controls"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@+id/present_counter"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/present_increase"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_gradient"
                android:backgroundTint="@color/primary_light"
                android:onClick="increasePresent"
                android:text="@string/increment"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/present_decrease"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="2dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_gradient"
                android:backgroundTint="@color/primary_light"
                android:gravity="center"
                android:onClick="decreasePresent"
                android:text="@string/decrement"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/absent_counter"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/list_background"
            android:backgroundTint="@color/crimson"
            android:elevation="5dp"
            android:fontFamily="@font/lily_script_one"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintEnd_toStartOf="@+id/absent_controls"
            app:layout_constraintStart_toEndOf="@+id/present_controls"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/absent_controls"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.5"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/absent_increase"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="3dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_gradient"
                android:backgroundTint="@color/primary_light"
                android:onClick="increaseAbsent"
                android:text="@string/increment"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/absent_decrease"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="2dp"
                android:layout_weight="0.5"
                android:background="@drawable/button_gradient"
                android:backgroundTint="@color/primary_light"
                android:gravity="center"
                android:onClick="decreaseAbsent"
                android:text="@string/decrement"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/present_counter">

            <Button
                android:id="@+id/update_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_gradient"
                android:fontFamily="@font/halant_medium"
                android:onClick="updateAttendance"
                android:text="@string/update"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <Button
                android:id="@+id/reset_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_gradient"
                android:fontFamily="@font/halant_medium"
                android:onClick="resetCounter"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/reset"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>